--- a/informaswan/src/app/informaswan-pages/common/card/card.component.css
+++ b/informaswan/src/app/informaswan-pages/common/card/card.component.css
@@ -1,6 +1,6 @@
 .card {
     position: relative;
-    width: 300px; /* Adjust dimensions as needed */
+    width: 300px;
     height: 200px;
     border-radius: 10px;
     overflow: hidden;
@@ -15,7 +15,7 @@
     height: 100%;
     background-size: cover;
     background-position: top;
-    filter: blur(1px); /* Optional: Add a blur effect to the background */
+    filter: blur(1px);
     z-index: -1;
   }
   
@@ -23,5 +23,5 @@
     position: relative;
     z-index: 1;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.2); /* Adjust opacity if needed */
+    background-color: rgba(255, 255, 255, 0.2);
   }
