--- a/informaswan/src/app/informaswan-pages/common/card/card.component.html
+++ b/informaswan/src/app/informaswan-pages/common/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card my-2">
     <div class="card-background" [style.backgroundImage]="'url(' + backgroundImage + ')'"></div>
     <div class="card-content">
       <!-- Your card content here -->
