--- a/src/app/informaswan-pages/common/card/card.component.css
+++ b/src/app/informaswan-pages/common/card/card.component.css
@@ -1,6 +1,7 @@
 .card {
+    margin-top: 30px;
     position: relative;
-    width: 300px;
+    width: 100%;
     height: 200px;
     border-radius: 10px;
     overflow: hidden;
