--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <main>
   <div>
-    <app-landing-page></app-landing-page>
+    <nav>
+      <a routerLink="/workout-exercises">I Workout</a>
+    </nav>
   </div>
+  <router-outlet></router-outlet>
 </main>
