routing be working mo betta

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <main>
   <div>
+    <title>Informaswan</title>
     <nav>
       <a routerLink="/workout-exercises">I Workout</a>
+      <a routerLink="/informaswan">Informyoself</a>
     </nav>
   </div>
   <router-outlet></router-outlet>
