Trying to deploy again

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <title>Informaswan</title>
     <nav>
       <a routerLink="/workout-exercises">I Workout</a>
-      <a routerLink="/informaswan">Informyoself</a>
+      <a routerLink="/home">Informyoself</a>
     </nav>
   </div>
   <router-outlet></router-outlet>
